--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -105,7 +105,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Dark Todo App</h1>
+    <h1>The Dark Todo App</h1>
     <div id="date-display">Loading date...</div>
 
     <form id="todo-form">
